css/styles.css
/* ... */
p {
  color: var(--text-color);
  line-height: 1.45;

  &.faq-subhead {
    margin-top: 1rem !important;
    font-weight: 500;
  }
}

h1,
h2,
h3 {
  color: var(--subhead-color);
  font-weight: 600;
  font-family: "Roboto Condensed SemiBold", sans-serif;
}

h1 {
  margin-block-start: 0.2em;
  margin-block-end: 0.2em;
  font-size: 1.75rem;
}

h2 {
  margin-block-end: 0.25em;
}

h2 + p,
h3 + p {
  margin-block-start: 0;
}

h3 {
  font-size: 1.45rem;
  margin-block-start: 0;
  font-family: "Roboto Condensed";
  margin-block-end: 0.25rem;
}

strong {
  font-weight: 600;
}

.category-section {
  line-height: 1.6;
  margin-block-end: 1rem;
  cursor: default;
}

.category-header {
  font-weight: bold;
  font-size: 1.1rem;
  text-decoration: none;
  color: var(--category-header-color);
  display: block;
  margin-block-start: 0.5rem;
  text-decoration: underline dotted;
  text-underline-offset: 4px;
}

.left-side-nav {
  list-style-type: none;
  display: flex;
  flex-direction: column;
  margin-inline-start: 0;
  padding-inline-start: 0;
  margin-block-start: 0;
}

.left-side-nav a {
  display: block;
  padding-inline-start: 1rem;
  padding-block: 0.35rem;
  text-decoration: none;
  color: inherit;
}

.left-side-nav a:hover {
  background-color: var(--border-color);
  color: #efefef;
}

blockquote.quote {
  font-size: 1.1rem;
  line-height: 1.4;
  font-family: "Roboto", sans-serif;
  margin-top: 1rem;
  margin-bottom: 1rem;
  margin-left: 0;
  margin-inline-end: 0;
  padding: 0.25rem 1rem;
  border-radius: 12px;
  border-left: 2px solid var(--border-color);
  border-top: 2px solid var(--border-color);
  border-bottom: 2px solid var(--border-color);
  border-right: 2px solid var(--border-color);
  background-color: #121212;
  background: linear-gradient(
      90deg,
      var(--gradient-start-color),
      var(--panels-bg-color)
    )
    no-repeat left center;
  color: #f1f1f1;
  color: #212121;
  /* padding-block: 0.25rem !important; */
  animation: fadeIn 1.5s;
}

blockquote > div {
  display: flex;
}

blockquote > div > i {
  display: inline-block;
  margin: 1.2rem 0;
  color: var(--border-color);
  font-size: 2.5em;
  margin-right: 0.5rem;
}

blockquote > div > div {
  margin-top: 0.2rem;
}

blockquote > div > div > cite {
  display: inline-block;
  margin-top: 0.35rem;
}

.page-container {
  display: block !important;
  width: 100%;
  background-color: var(--page-bg-color);
  height: 100vh;
}

.grid-container {
  display: grid;
  grid-template-columns: 95vw;
  grid-auto-rows: auto;
  grid-template-areas:
    "content"
    "footer";
  padding-block-start: 3.75rem;
  margin: 0 auto;
  width: 95vw;
  border: 4px solid var(--border-color);
  border-radius: 15px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-top: none;
}

.grid-desktop-header {
  display: none;
}

.grid-content {
  background-color: var(--page-bg-color);
  grid-area: content;
  margin-block-start: 0;
  padding-inline: 1rem;
}

.grid-content h2 {
  margin-block-start: 0.75rem;
  font-family: "Roboto Condensed", sans-serif;
  font-size: 1.6rem;
}

.grid-footer {
  background-color: var(--panels-bg-color);
  grid-area: footer;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  border-top: 3px solid var(--border-color);
  border-bottom-left-radius: 15px;
  border-bottom-right-radius: 15px;
}

.grid-lside-desktop {
  display: none;
}

.grid-rside-expanded {
  display: none;
}

.main-heading {
  display: none;
}

.pitch-section {
  border: 3px solid var(--pitch-section-border-color);
  border-radius: 14px;
  padding: 0.25rem 0.25rem 0.5rem;
  margin-block-end: 1rem;
  background: white;
  animation: fadeIn 1.5s;

  p:last-of-type {
    margin-block-end: 0;
  }

  h2 {
    margin-block-start: 0.15rem;
  }

  .pitch-section-heading {
    display: flex;
    display: -webkit-flex;
    column-gap: 0.65rem;
    overflow: hidden;

    .pitch-section-img {
      img {
        max-width: 70px;
        margin-block-start: 0.25rem;
        border-radius: 0.85rem;
        flex-basis: 70px;
        flex-grow: 0;
        -moz-border-radius: 0.85rem;
        -webkit-border-radius: 0.85rem;
        border: 2px solid var(--pitch-section-border-color);

        -webkit-mask-image: -webkit-radial-gradient(white, black);

        transform: translateZ(0);

        @media (min-width: 800px) {
          max-width: 80px;
          flex-basis: 80px;
        }
      }
    }

    .pitch-section-head {
      flex-grow: 1;
      justify-content: center;

      /* .term-link:hover {
        background-color: yellow;
        text-decoration: none;
      } */
    }
  }

  .pitch-section-body {
    padding: 0.25rem;

    p:first-child {
      margin-block-start: 0;
    }
  }

  /* .pitch-section-layout {
    display: flex;
    column-gap: 0.65rem;
    padding-inline-start: 0.2rem;
    height: max-content;
    align-items: flex-start;

    .pitch-section-img {
      img {
        max-width: 70px;
        margin-top: 0.25rem;
        border-radius: 0.85rem;
        border: 2px solid var(--pitch-section-border-color);

        @media (min-width: 800px) {
          max-width: 80px;
        }
      }
    }

     .pitch-section-text {
      flex-grow: 1;
      justify-content: center;

      .term-link:hover {
        background-color: yellow;
        text-decoration: none;
      }
    } 
  } */

  /* .pitch-section-layout-alt {
    display: flex;
    column-gap: 1rem;
    padding-inline-start: 0.2rem;
    height: max-content;
    align-items: flex-start;

    .pitch-section-text {
      flex: 0 1 80%;
      justify-content: center;
    }

    .pitch-section-img {
      flex: 0 0 10%;

      img {
        max-width: 100px;
        padding-top: 0.4rem;
        border-radius: 0.85rem;
      }
    }
  } */
}
/* ... */

